This file documents the revision history for Perl extension Mojolicious.

        - Fix exception in Mojo::JSON (under perl 5.8.5)

1.01 2010-12-27 00:00:00
        - Relicensed some of the images to make sure Mojolicious can be
          shipped with commercial products.
        - Added EXPERIMENTAL title helper.
        - Improved documentation.
        - Improved test. (Charlie Brady)
        - Fixed punycode bug. (kits)

1.0 2010-12-26 00:00:00
        - Code name "Snowflake", this is a major release.
        - Deprecated session method in Mojolicious.
        - Deprecated handler and helper attributes in Mojolicious::Renderer.
        - Added new exception and not_found templates.
        - Added POD browser to Mojolicious::Plugin::PodRenderer.
        - Added EXPERIMENTAL content_for helper.
        - Disabled debug log messages for static files.
        - Improved Hypnotoad web server to restart workers regularly.
        - Improved documentation.
        - Improved query manipulation in Mojo::URL. (yko)
        - Improved TLS exception handling.
        - Improved nested exception handling. (spleenjack)
        - Improved tests. (janus)
        - Fixed relative path handling.
        - Fixed application generator. (yko)
        - Fixed support for multiline expressions in Mojo::Template.
        - Fixed multiple --reload related leaks and reduced overall memory
          usage.
        - Fixed exception handling for included templates.
        - Fixed a small Mojo::Server::PSGI header bug.
        - Fixed a small Mojo::DOM selector bug.
        - Fixed typos. (punytan)

0.999950 2010-11-30 00:00:00
        - Added EXPERIMENTAL Hypnotoad web server.
        - Added EXPERIMENTAL built in exception and not_found templates.
        - Added put and del functions to Mojolicious::Lite.
        - Added on_idle and on_tick event handlers to Mojo::IOLoop.
        - Added "*" query support to the Mojo::IOLoop resolver.